objects/Goal_Type_Credit_Type__c.object
<CustomObject>
    <description>Each Goal Type may be associated with many Credit Types. These are stored as Value Types, and are used to set master conditions for crediting transaction filtering.</description>
    <fields>
        <fullName>Counter_ID__c</fullName>
        <displayFormat>GTCT{0}</displayFormat>
        <label>Counter ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Credit_Type__c</fullName>
        <label>Credit Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Value_Type__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Value_Type__c.Category__c</field>
                <operation>equals</operation>
                <value>Credit type</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Value_Type__c</referenceTo>
        <relationshipLabel>Goal Type Credit Types</relationshipLabel>
        <relationshipName>Goal_Type_Credit_Types</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Goal_Type__c</fullName>
        <label>Goal Type</label>
        <referenceTo>Goal_Type__c</referenceTo>
        <relationshipLabel>Goal Type Credit Types</relationshipLabel>
        <relationshipName>Goal_Type_Credit_Types</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Goal Type Credit Type</label>
    <nameField>
        <label>Goal Type Credit Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goal Type Credit Types</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>